CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( remu )

FIND_PACKAGE( SDL REQUIRED )

SET( LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib" )
SET( EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin" )

SET( CMAKE_C_FLAGS           "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -std=gnu11" )
SET( CMAKE_C_FLAGS_DEBUG     "${CMAKE_C_FLAGS_DEBUG} -Og -g" )
SET( CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE} -O3" )
SET( CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -std=gnu++11 -fno-rtti" )
SET( CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} -Og -g" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3" )

INCLUDE_DIRECTORIES( SYSTEM
                     "${PROJECT_SOURCE_DIR}/3rdparty/google-test/include" )

ADD_SUBDIRECTORY( 3rdparty/google-test )

ENABLE_TESTING()

INCLUDE_DIRECTORIES( "${PROJECT_SOURCE_DIR}/src/remu_core/inc"
                     "${PROJECT_SOURCE_DIR}/src/util/inc"
                     ${SDL_INCLUDE_DIRS} )

ADD_SUBDIRECTORY( src/binary )
ADD_SUBDIRECTORY( src/jitpp )
ADD_SUBDIRECTORY( src/jitpp_tools )
ADD_SUBDIRECTORY( src/remu_cli )
ADD_SUBDIRECTORY( src/remu_core )
ADD_SUBDIRECTORY( src/vmm )
ADD_SUBDIRECTORY( src/util )

